Add JsonProperty to api models