@@ -1,14 +1,15 @@
 package de.pddao.backend.service;
 
+import de.pddao.backend.model.api.DwdApiContent;
 import de.pddao.backend.model.api.DwdApiResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
+import java.sql.SQLOutput;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class DwdApiService {
@@ -20,16 +21,14 @@ public class DwdApiService {
         this.restTemplate = restTemplate;
     }
 
-//    public List<DwdApiResponse> getPollenCount() {
-//        ResponseEntity<DwdApiResponse[]> response = restTemplate.getForEntity(dwdApi, DwdApiResponse[].class);
-//
-//        if (response.getBody() != null) {
-//            return Arrays.stream(response.getBody()).map(this::mapDwdPollenCountToInternalPollenCountModel).collect(Collectors.toList());
-//
-//        }
-//        return List.of();
-//    }
-//
-//    private PollenCount mapDwdPollenCountToInternalPollenCountModel()
+    public List<DwdApiResponse> getPollenCount() {
+        ResponseEntity<DwdApiResponse> response = restTemplate.getForEntity(dwdApi, DwdApiResponse.class);
+
+        if (response.getBody() != null) {
+            System.out.println(response.getBody());
+            return Arrays.asList(response.getBody());
+        }
+        return List.of();
+    }
 
 }
